--- a/senate-starter-page.html
+++ b/senate-starter-page.html
@@ -38,79 +38,9 @@
 			precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal
 			judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal
 			uniformed officers, as well as trial of federal officials impeached by the House.</p>
-		<table>
-			<thead>
-				<tr>
-					<th>Members</th>
-					<th>First name</th>
-					<th>Middle name</th>
-					<th>Last name</th>
-					<th>Party</th>
-					<th>Total votes</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>1</td>
-					<td>Lamar</td>
-					<td></td>
-					<td>Alexander</td>
-					<td>R</td>
-					<td>657</td>
-				</tr>
-				<tr>
-					<td>2</td>
-					<td>Kelly</td>
-					<td>null</td>
-					<td>Ayotte</td>
-					<td>R</td>
-					<td>657</td>
-				</tr>
-				<tr>
-					<td>3</td>
-					<td>Roy</td>
-					<td></td>
-					<td>Blunt</td>
-					<td>R</td>
-					<td>657</td>
-				</tr>
-				<tr>
-					<td>4</td>
-					<td>Barbara</td>
-					<td>null</td>
-					<td>Boxer</td>
-					<td>D</td>
-					<td>657</td>
-				</tr>
-				<tr>
-					<td>5</td>
-					<td>Sherrod</td>
-					<td></td>
-					<td>Brown</td>
-					<td>D</td>
-					<td>657</td>
-				</tr>
-				<tr>
-					<td>6</td>
-					<td>Richard</td>
-					<td>M.</td>
-					<td>Burr</td>
-					<td>R</td>
-					<td>657</td>
-				</tr>
-				<tr>
-					<td>7</td>
-					<td>Tammy</td>
-					<td>null</td>
-					<td>Baldwin</td>
-					<td>D</td>
-					<td>657</td>
-				</tr>
-			</tbody>
-		</table>
 	</div>
-	<table id="senate-data"></table>
-	<script src="113-house.js"></script>
+	<table id="senateData"></table>
+	<script src="113-senate.js"></script>
 
 </body>
 
