--- a/senate-starter-page.html
+++ b/senate-starter-page.html
@@ -12,12 +12,12 @@
 				<a href="#">TGIF</a>
 			</div>
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li>
 					<a href="#">Congress 113</a>
 					<ul>
 						<li><a href="#">Senate</a></li>
-						<li><a href="#">House</a></li>
+						<li><a href="house-starter-page.html">House</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -40,7 +40,7 @@
 			uniformed officers, as well as trial of federal officials impeached by the House.</p>
 	</div>
 	<table id="senateData"></table>
-
+		
 	<script src="113-senate.js"></script>
 </body>
 
