--- a/senate-starter-page.html
+++ b/senate-starter-page.html
@@ -39,7 +39,21 @@
 			judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal
 			uniformed officers, as well as trial of federal officials impeached by the House.</p>
 	</div>
-	<table id="senateData"></table>
+	<table>
+		<thead>
+			<tr>
+				<td>Senators</td>
+				<td>Party Affiliation</td>
+				<td>State</td>
+				<td>Seniority</td>
+				<td>Votes with party</td>
+			</tr>
+		</thead>
+		<tbody id="senateData">
+
+		</tbody>
+
+	</table>
 		
 	<script src="113-senate.js"></script>
 </body>
