--- a/senate-data.html
+++ b/senate-data.html
@@ -17,7 +17,7 @@
 					<a href="#">Congress 113</a>
 					<ul>
 						<li><a href="#">Senate</a></li>
-						<li><a href="house-starter-page.html">House</a></li>
+						<li><a href="house-data.html">House</a></li>
 					</ul>
 				</li>
 			</ul>
