--- a/house-data.html
+++ b/house-data.html
@@ -16,7 +16,7 @@
         <li>
           <a href="#">Congress 113</a>
           <ul>
-            <li><a href="senate-starter-page.html">Senate</a></li>
+            <li><a href="senate-data.html">Senate</a></li>
             <li><a href="#">House</a></li>
           </ul>
         </li>
