--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
               <li >
                 <a href="#">Congress 113</a>
                 <ul >
-                  <li><a href="senate-starter-page.html">Senate</a></li>
-                  <li><a href="house-starter-page.html">House</a></li>
+                  <li><a href="senate-data.html">Senate</a></li>
+                  <li><a href="house-data.html">House</a></li>
                 </ul>
               </li>
             </ul>
