--- a/house-data.html
+++ b/house-data.html
@@ -2,42 +2,93 @@
 <html lang="en">
 
 <head>
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-  <nav>
-    <div>
-      <div>
-        <a href="#">TGIF</a>
-      </div>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li>
-          <a href="#">Congress 113</a>
-          <ul>
-            <li><a href="senate-data.html">Senate</a></li>
-            <li><a href="#">House</a></li>
-          </ul>
+
+  <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border ">
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+      <ul class="navbar-nav mr-auto">
+
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Congress 113
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">House</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="senate-data.html">Senate</a>
+
+          </div>
+
         </li>
       </ul>
     </div>
   </nav>
+
   <!--Table container-->
-  <div>
-    <h2>Congressmen</h2>
-    <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills
-      must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the
-      House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive
-      powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in
-      the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
-    <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every
-      state is entitled to at least one representative. </p>
-    <table id="houseData">
+
+  <div class="container">
+    <div>
+      <h2>Congressmen</h2>
+      <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills
+        must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both
+        the
+        House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some
+        exclusive
+        powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in
+        the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
+      <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but
+        every
+        state is entitled to at least one representative. </p>
+    </div>
+
+
+    <table class="container table table-striped table-hover">
+      <thead>
+        <tr>
+          <td>Name</td>
+          <td>Party</td>
+          <td>State</td>
+          <td>Years in Office</td>
+          <td>% Votes with party</td>
+        </tr>
+      </thead>
+      <tbody id="houseData">
+
+      </tbody>
 
     </table>
   </div>
   <script src="113-house.js"></script>
+  <script src="main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
