--- a/senate-data.html
+++ b/senate-data.html
@@ -2,27 +2,49 @@
 <html lang="en">
 
 <head>
-
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-	<nav>
-		<div>
-			<div>
-				<a href="#">TGIF</a>
-			</div>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li>
-					<a href="#">Congress 113</a>
-					<ul>
-						<li><a href="#">Senate</a></li>
-						<li><a href="house-data.html">House</a></li>
-					</ul>
+
+	<nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border">
+
+
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+			<ul class="navbar-nav mr-auto">
+
+				<li class="nav-item active">
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+				</li>
+
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false">
+						Congress 113
+					</a>
+
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="house-data.html">House</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#">Senate</a>
+
+					</div>
+
 				</li>
 			</ul>
 		</div>
 	</nav>
+
 
 
 	<header>
@@ -30,7 +52,7 @@
 		</div>
 	</header>
 	<!--Table container-->
-	<div>
+	<div class="container">
 		<h2>Senators</h2>
 		<p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S.
 			Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year
@@ -39,14 +61,14 @@
 			judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal
 			uniformed officers, as well as trial of federal officials impeached by the House.</p>
 	</div>
-	<table>
+	<table class="container table table-striped table-hover">
 		<thead>
 			<tr>
-				<td>Senators</td>
-				<td>Party Affiliation</td>
+				<td>Name</td>
+				<td>Party</td>
 				<td>State</td>
-				<td>Seniority</td>
-				<td>Votes with party</td>
+				<td>Years in Office</td>
+				<td>% Votes with party</td>
 			</tr>
 		</thead>
 		<tbody id="senateData">
@@ -54,8 +76,18 @@
 		</tbody>
 
 	</table>
-		
 	<script src="113-senate.js"></script>
+	<script src="main.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
+
 </body>
 
 </html>
