ups, intentando arreglar la navbar

--- a/house-data.html
+++ b/house-data.html
@@ -11,7 +11,10 @@
 
 <body>
 
-  <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border ">
+	<header id="header">
+	</header>
+
+  <nav id="navbar" class="container-fluid navbar navbar-expand-md navbar-light bg-light border">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,10 +76,9 @@
         </tr>
       </thead>
       <tbody id="houseData">
-
       </tbody>
-
     </table>
+
   </div>
   <script src="113-house.js"></script>
   <script src="main.js"></script>
