--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-  <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border ">
+
+  <header id="header">
+  </header>
+    
+  <nav id="navbar" class="container-fluid navbar navbar-expand-md navbar-light bg-light border">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,14 +47,10 @@
     </div>
   </nav>
 
-
-  <header>
     <div>
       <p>https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment</p>
-
     </div>
-  </header>
-  <!--Table container-->
+
   <div class="container">
     <h2>About Us</h2>
     <p>Openness, accountability, and honesty define government transparency. In a free society, transparency is
@@ -92,8 +91,8 @@
       <p>The United States passed its Freedom of Information Act (FOIA) in 1966, FOIAs, Access to Information Acts
         (AIAs) or equivalent laws were passed in Denmark and Norway in 1970.</p>
 
-
   </div>
+
   <script src="main.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
