--- a/senate-data.html
+++ b/senate-data.html
@@ -11,8 +11,10 @@
 
 <body>
 
-	<nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border">
+	<header id="header">
+	</header>
 
+	<nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border">
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,14 +47,8 @@
 		</div>
 	</nav>
 
-
-
-	<header>
-		<div>
-		</div>
-	</header>
 	<!--Table container-->
-	<div class="container">
+	<div class="container content">
 		<h2>Senators</h2>
 		<p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S.
 			Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year
@@ -72,10 +68,9 @@
 			</tr>
 		</thead>
 		<tbody id="senateData">
-
 		</tbody>
-
 	</table>
+
 	<script src="113-senate.js"></script>
 	<script src="main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
