--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 </head>
 
 <body>
-
-  <header id="header">
-  </header>
     
-  <nav id="navbar" class="container-fluid navbar navbar-expand-md navbar-light bg-light border">
+  <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +48,7 @@
       <p>https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment</p>
     </div>
 
-  <div class="container">
+  <div class="container content">
     <h2>About Us</h2>
     <p>Openness, accountability, and honesty define government transparency. In a free society, transparency is
       government's obligation to share information with citizens. It is at the heart of how citizens hold their public
