--- a/senate-data.html
+++ b/senate-data.html
@@ -11,10 +11,7 @@
 
 <body>
 
-	<header id="header">
-	</header>
-
-	<nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border">
+	<nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
