--- a/house-data.html
+++ b/house-data.html
@@ -11,10 +11,7 @@
 
 <body>
 
-	<header id="header">
-	</header>
-
-  <nav id="navbar" class="container-fluid navbar navbar-expand-md navbar-light bg-light border">
+  <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +46,7 @@
 
   <!--Table container-->
 
-  <div class="container">
+  <div class="container content">
     <div>
       <h2>Congressmen</h2>
       <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills
