--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <title>Home</title>
 </head>
 
 <body>
     
+
+  <header></header>
   <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -87,8 +90,11 @@
 
       <p>The United States passed its Freedom of Information Act (FOIA) in 1966, FOIAs, Access to Information Acts
         (AIAs) or equivalent laws were passed in Denmark and Norway in 1970.</p>
-
   </div>
+
+	<footer class="container content bg-light border my-auto">
+		<p>&copy; 2016 TGIF | All Right Reserved</p> 
+	</footer>
 
   <script src="main.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
