--- a/senate-data.html
+++ b/senate-data.html
@@ -7,11 +7,12 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<title>Senators</title>
 </head>
 
 <body>
 
-	<nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
+	<nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border">
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,6 +68,10 @@
 		<tbody id="senateData">
 		</tbody>
 	</table>
+
+	<footer class="container content bg-light border my-auto">
+		<p>&copy; 2016 TGIF | All Right Reserved</p> 
+	</footer>
 
 	<script src="113-senate.js"></script>
 	<script src="main.js"></script>
