--- a/house-data.html
+++ b/house-data.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <title>Congressmen</title>
 </head>
 
 <body>
@@ -75,8 +76,12 @@
       <tbody id="houseData">
       </tbody>
     </table>
-
   </div>
+
+	<footer class="container content bg-light border my-auto">
+		<p>&copy; 2016 TGIF | All Right Reserved</p> 
+	</footer>
+
   <script src="113-house.js"></script>
   <script src="main.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
