--- a/senate-data.html
+++ b/senate-data.html
@@ -55,6 +55,16 @@
 			judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal
 			uniformed officers, as well as trial of federal officials impeached by the House.</p>
 	</div>
+
+	<div class="container content" id="checkboxes">
+		<p>Filter by Party: </p>
+		<label><input type="radio" name="party" id="republican"> Republican </label>
+		<label><input type="radio" name="party" id="democrat"> Democrat </label>
+		<label><input type="radio" name="party" id="independent"> Independent </label>
+
+
+	</div>
+
 	<table class="container table table-striped table-hover">
 		<thead>
 			<tr>
