--- a/house-data.html
+++ b/house-data.html
@@ -14,6 +14,11 @@
 
   <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
 
+    <a class="navbar-brand" href="#">
+      <img src="Images/iconHouse2.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      TGIF
+    </a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -78,9 +83,9 @@
     </table>
   </div>
 
-	<footer class="container content bg-light border my-auto">
-		<p>&copy; 2016 TGIF | All Right Reserved</p> 
-	</footer>
+  <footer class="container content bg-light border my-auto">
+    <p>&copy; 2016 TGIF | All Right Reserved</p>
+  </footer>
 
   <script src="113-house.js"></script>
   <script src="main.js"></script>
