--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
   <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
 
+    <a class="navbar-brand" href="#">
+      <img src="Images/iconHouse2.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      TGIF
+    </a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
