--- a/senate-data.html
+++ b/senate-data.html
@@ -4,13 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<title>Senators</title>
 </head>
 
-<body>
+<body class="light-mode">
 
 	<nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border">
 		
@@ -42,17 +43,17 @@
 						<a class="dropdown-item" href="house-data.html">House</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="#">Senate</a>
-
 					</div>
 
 				</li>
 			</ul>
 
 			<form class="form-inline my-2 my-lg-0">
-					<input class="form-control mr-sm-2" type="search" id="searchInput" placeholder="Search for name..." aria-label="Search" onkeyup="filterName()">
+					<input class="form-control mr-sm-2" type="search" id="searchInput" placeholder="Search for name..." aria-label="Search" onkeyup="filterByName()">
 			</form>
 
 		</div>
+
 	</nav>
 
 	<!--Table container-->
@@ -68,6 +69,7 @@
 
 	<div class="container content" id="checkboxes">
 		<p>Filter by Party: </p>
+		<label><input type="radio" name="party" id="all" onchange='showAll()' checked> Show All </label>
 		<label><input type="radio" name="party" id="republican" onchange='republicanFilter("R")'> Republican </label>
 		<label><input type="radio" name="party" id="democrat" onchange='democratFilter("D")'> Democrat </label>
 		<label><input type="radio" name="party" id="independent" onchange='independentFilter("I")'> Independent </label>
@@ -102,7 +104,6 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
-
 </body>
 
 </html>
