--- a/house-data.html
+++ b/house-data.html
@@ -14,7 +14,7 @@
 
   <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
 
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
       <img src="Images/iconHouse2.png" width="30" height="30" class="d-inline-block align-top" alt="">
       TGIF
     </a>
