Cambiando el metodo de filtrado

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
     </div>
 
-    <footer id="footer" class="container content bg-light border my-auto">
+    <footer  class="footer bg-light border my-auto">
       <p>&copy; 2016 TGIF | All Right Reserved</p>
     </footer>
 
