--- a/senate-data.html
+++ b/senate-data.html
@@ -150,7 +150,9 @@
     </div>
 
     <div class="container content">
-      <select name="state" id="stateSelect"> </select>
+      <select name="state" id="stateSelect" onclick="console.log(filteredCongressMembers)"> 
+
+      </select>
     </div>
 
     <table class="container table table-hover">
