state filter implemented

--- a/senate-data.html
+++ b/senate-data.html
@@ -150,8 +150,7 @@
     </div>
 
     <div class="container content">
-      <select name="state" id="stateSelect" onclick="console.log(filteredCongressMembers)"> 
-
+      <select id="stateSelect" onchange="updateTableWithNewState();"> 
       </select>
     </div>
 
