retoques finales a los filtros

--- a/index.html
+++ b/index.html
@@ -214,8 +214,16 @@
         </div>
       </div>
 
-      <footer class="footer bg-light border my-auto">
+
+    </div>
+
+    <!-- <footer class="container content footer bg-light border">
         <p>&copy; 2016 TGIF | All Right Reserved</p>
+      </footer> -->
+
+    <div>
+      <footer>
+          <p>&copy; 2016 TGIF | All Right Reserved</p>
       </footer>
     </div>
 
