statistics and calculations js

--- a/house-data.html
+++ b/house-data.html
@@ -131,7 +131,7 @@
           <td>% Votes with party</td>
         </tr>
       </thead>
-      <tbody id="houseData"></tbody>
+      <tbody id="data"></tbody>
     </table>
   </div>
 
