--- a/senate-data.html
+++ b/senate-data.html
@@ -133,7 +133,7 @@
           <td>% Votes with party</td>
         </tr>
       </thead>
-      <tbody id="senateData"></tbody>
+      <tbody id="data"></tbody>
     </table>
   </div>
 
