--- a/index.html
+++ b/index.html
@@ -213,12 +213,14 @@
           </div>
         </div>
       </div>
-      <img
-        class="content media"
-        id="homeLogo"
-        src="images/iconHouse2.png"
-        alt="Logo for the Transparent Government in Fact association"
-      />
+      <div>
+        <img
+          class="content media"
+          id="homeLogo"
+          src="images/iconHouse2.png"
+          alt="Logo for the Transparent Government in Fact association"
+        />
+      </div>
     </div>
 
     <footer id="footer" class="container content bg-light border my-auto">
